--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,6 +7,8 @@ body {
   width: 100vw;
 }
 .tweets--list {
+  padding-left: 1em;
+  padding-right: 1em;
   height: 50vh;
-  overflow: scroll;
+  overflow-y: scroll;
 }
